# arctax

./: .gitignore  LICENSE  README.md  SETUP.md  pyproject.toml  setup.py
arctax/: __init__.py  cli.py
arctax/compose/: __init__.py  bypass_generator.py  composer.py  templates.py
arctax/core/: llm_haddix.py  llm_optimizer.py
arctax/index/: __init__.py  indexer.py  searcher.py
arctax/io/: __init__.py  fetcher.py  parser.py
arctax/ml/: bypass_ml.py  data_processor.py
arctax/model/: __init__.py  defense.py  schema.py  taxonomy.py
arctax/multimodal/: payload_generator.py
arctax/recon/: fingerprinter.py
arctax/recon/probes/: check_safety_refusal.txt  get_model_name.txt
arctax/templates/: __init__.py  advanced_techniques.json  defense_template.md  red_team_template.md
arctax/templates/rag/: context_override.md
arctax/testing/: bypass_tester.py
test_schema/: base_taxon.schema.json  defense_item.schema.json  evasion.schema.json  guardrail_config.schema.json  intent.schema.json  probe.schema.json  technique.schema.json
tests/: test_composer.py  test_models.py
