[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arctax"
version = "0.1.0"
description = "CLI para geração de prompts baseados na Arcanum Prompt Injection Taxonomy"
authors = [{name = "Arctax Team"}]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "typer[all]>=0.12.0",
    "pydantic[email]>=2.8.0",
    "rich>=13.7.0",
    "pyyaml>=6.0",
    "jsonschema>=4.21.0",
    "jinja2>=3.1.0",
    "httpx>=0.27.0",
    "click>=8.0.0",
    "Pillow>=10.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.10.0",
    "ruff>=0.5.0",
    "black>=24.0.0"
]

[project.scripts]
arctax = "arctax.cli:app"

[tool.ruff]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "T20"]
ignore = ["E501"]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=arctax --cov-report=term-missing"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"